# FlockChatter

./: CMakeLists.txt  LICENSE  README.md
assets/: audioTest.html  index.html  indexLoggedin.html  logout.html
src/: index.html  main.cpp  mainClient.cpp  mainServer.cpp
src/helpers/: helpers.cpp  helpers.hpp
src/http/: http.cpp  http.hpp
src/login/: login.cpp  login.hpp
src/networking/: networking.cpp  networking.hpp
src/server/: server.cpp  server.hpp
